Yoinked Mose's Command System

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: IronForgeLight
+name: IronForgePack
 version: '${project.version}'
 main: colonelkai.ironforgepack.IronForgePack
 api-version: 1.15
