--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ColonelKai</groupId>
     <artifactId>IronForgePack</artifactId>
-    <version>1.4</version>
+    <version>1.4b</version>
     <packaging>jar</packaging>
 
     <name>IronForgePack</name>
@@ -45,10 +45,6 @@
             <id>org.jetbrains</id>
             <url>https://mvnrepository.com/artifact/org.jetbrains/annotations</url>
         </repository>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
     </repositories>
 
     <dependencies>
@@ -64,12 +60,6 @@
             <artifactId>annotations</artifactId>
             <version>16.0.2</version>
 			<scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.mosemister</groupId>
-            <artifactId>BukkitCommandSystem</artifactId>
-            <version>1.1.3</version>
         </dependency>
     </dependencies>
 </project>
