--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,18 @@
 name: IronForgePack
 version: '${project.version}'
 main: colonelkai.ironforgepack.IronForgePack
+author: ColonelKai
 api-version: 1.15
+commands:
+  weaponsearch:
+    aliases:
+      - weapons
+      - wsearch
+    description: Search another player for Weapons.
+    permission-message: You are prohibited from searching for weapons.
+    usage: /weaponsearch <player>
+
+permissions:
+  ironforge.weaponsearch:
+    description: Allows you to WeaponSearch players.
+    default: true
